Add detail tools view in web app and refine ui/ux
